--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imgs/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/all.min.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Yummy</title>
 </head>
 
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="nav-header d-flex flex-column justify-content-between py-4 text-center px-2 bg-white text-black">
-            <img class="logo" src="imgs/logo.png" alt="" srcset="">
+            <img class="logo" src="assets/images/logo.png" alt="" srcset="">
             <i class="fa-solid open-close-icon fa-align-justify fa-2x"></i>
             <div>
                 <i class="fa-solid fa-globe d-block"></i>
@@ -76,6 +76,7 @@
 
 
 
+    <script src="js/jquery.skitter.min.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
